--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
     background-color:cadetblue;
+    font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
 }
 
-.label {
+#bar-chart .label {
     text-anchor: middle;
 }
