--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color:cadetblue;
+    background-color: rgb(150, 154, 165);
     font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 }
