--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 body {
-    background-color: rgb(150, 154, 165);
+    background-color: #cfd5e6;
     font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 }
 
 #bar-chart .label {
     text-anchor: middle;
+}
+
+#map-dropdown {
+    padding-top: 100px;
+    padding-left: 1000px;
 }
