--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #cfd5e6;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Georgia, Helvetica, sans-serif;
 	font-size: 12px;
 }
 
@@ -16,13 +16,46 @@ svg {
     line-height: 1.5;
 }
 
+.parent {
+    padding-top: 20vh;
+    display: flex;
+    width: 100%;
+}
+  
+.child {
+    flex: 1;
+    margin: 10px;
+}
+  
+.child:first-child {
+    margin-right: 20px;
+}
+
 .title-div {
-    padding-top: 5vh;
-    text-align: center;
+    text-align: left;
+}
+
+.title-div h1 {
+    font-size: 3em;
+    line-height: 1.3;
+    padding-left: 20vw;
+}
+
+h2 {
+    font-size: 2em;
+}
+
+img {
+    max-width: 160px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 .subtitle {
     padding-top: 150px;
+    padding-bottom: 20px;
 }
 
 /* Bar Chart */
@@ -153,6 +186,22 @@ g:hover text {
     z-index: 999 !important;
 }
 
+@media (max-width: 600px) {
+    .title-div h1 {
+        font-size: 2em;
+        padding-left: 50px;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 820px) {
+    .title-div h1 {
+        font-size: 2.5em;
+        padding-left: 50px;
+    }
+    .title-div img {
+        max-width: 100px;
+    }
+}
 
 @media (min-width: 1200px) {
     #timeline-scale{
