--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
     background-color: #cfd5e6;
     font-family: Georgia, Helvetica, sans-serif;
-	font-size: 12px;
+	font-size: 16px;
+    line-height: 1.5;
 }
 
 svg {
@@ -12,8 +13,19 @@ svg {
 
 .text {
     padding: 20vh 20vw;
-    font-size: 16px;
-    line-height: 1.5;
+}
+
+a {
+    z-index: 10;
+    position: relative;
+}
+
+.source {
+    padding: 0 20vw;
+}
+
+.source-text {
+    padding: 0 20vw 20vh 20vw;
 }
 
 .parent {
@@ -36,16 +48,16 @@ svg {
 }
 
 .title-div h1 {
-    font-size: 3em;
+    font-size: 2.8em;
     line-height: 1.3;
     padding-left: 20vw;
 }
 
 h2 {
-    font-size: 2em;
+    font-size: 1.6em;
 }
 
-img {
+.child img {
     max-width: 160px;
     display: block;
     margin-left: auto;
@@ -54,8 +66,10 @@ img {
 }
 
 .subtitle {
-    padding-top: 150px;
+    padding-top: 100px;
     padding-bottom: 20px;
+    padding-left: 20vw;
+    padding-right: 20vw;
 }
 
 /* Bar Chart */
@@ -188,17 +202,17 @@ g:hover text {
 
 @media (max-width: 600px) {
     .title-div h1 {
-        font-size: 2em;
+        font-size: 1.6em;
         padding-left: 50px;
     }
 }
 
 @media (min-width: 600px) and (max-width: 820px) {
     .title-div h1 {
-        font-size: 2.5em;
+        font-size: 2.3em;
         padding-left: 50px;
     }
-    .title-div img {
+    .child img {
         max-width: 100px;
     }
 }
