--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ h2 {
    display: flex;
    flex-direction: column;
    align-items: center;
+   margin-bottom: 100px;
 }
 
 .text-center.header{
